--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@snowpack/app-scripts-react": "^1.4.0",
@@ -16,6 +21,9 @@
     "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux-thunk": "^2.1.0",
     "jest": "^25.4.0",
     "prettier": "^2.0.0",
     "snowpack": "^2.5.0",
